2004-10-07 Scott Dattalo <scott@dattalo.com>
	* gui/gui_breadboard.cc, gui/gui_breadboard.h, gui/gui_menu.cc:
	Cleaned up the gui breadboard code a little by making the gui_module
	structure a GuiModule class. In addition, new modules are queued 
	into the breadboard and realized only after the breadboard has
	been built.
	
2004-10-07 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src_opcode.cc: window was being built before cpu had been
	initialized.
	* cli/cmd_disasm.cc, src/processor.cc, src/trace.cc: Disassembling
	and tracing had wrong addresses for the 18F family (again...)
	
2004-10-06 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src.h, gui/gui_src_asm.cc, gui/gui_src_opcode.cc,
	gui/gui_statusbar.cc, src/breakpoints.cc: Fixed breakpoint
	icon refreshing. Also fixed  Source browser window creation if either
	~/gpsim is missing or the registry hasn't been initialized

2004-10-05 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src_asm.cc: Moved the creation of the Search Dialog
	window out of Build() and into its own function. Changed the behavior 
	of the signal callbacks to conform to GTK+ 2.X

2004-10-04 Scott Dattalo <scott@dattalo.com>
	* README, INSTALL: Cleaned up stale documentation.
	
2004-10-04 Scott Dattalo <scott@dattalo.com>
	* cli/input.cc: Send an extra CR to the parser when loading a
	command file. Turns out that when the gui loads a file, the
	parser doesn't process it until another CR is seen.
	
2004-10-04 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src_asm.cc, gui/gui_regwin.cc, gui/gui_breadboard.cc:
	Removed some debugging printfs.
	* gui/gui_object.cc:
	With GTK+ 2.2.1 under linux, the gtk_widget_show() was losing
	the (x,y) position of the window.
	
2004-10-04 Scott Dattalo <scott@dattalo.com>
	* gui/gui_breadboard.cc, gui/gui_breadboard.h:
	The breadboard expose events invalidated drawing areas which in
	turn recursively generated expose events. I'm not sure why this
	code worked with GTK+ 1.x

2004-10-04 Scott Dattalo <scott@dattalo.com>